# Scout

./: .gitignore  README.md  example.py  experiment_log.md  inference.py  main.py  pyproject.toml  response_types.py  train.py  training_data.py
train/: progress.json  prompts.py  response_type.py  train.py  training_curriculum.json  training_data_gen.py  training_data_generation.py  training_topics.py
train_utils/: progress.json  prompts.py  response_type.py  training_curriculum2.json  training_data_generation.py  training_topics.py  training_topics2.py
